# C-Cli-Graphics

./: .gitignore  CMakeLists.txt  Makefile  graphics_lib.c
src/examples/chessboard/: chess_traceback.c
src/examples/mine_sweeper/: mine_sweeper.c
src/examples/plot_a_circle/: plot_a_circle.c
src/lib/: graphics_lib.c  graphics_lib.h  linked_list.c  linked_list.h  math_plot.c  queue.c  queue.h  utils.c  utils.h
src/test/: linked_list_test.c  util_test.c
